[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/guns/Infected_Bullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/guns/Infected_Ring.gd" type="Script" id=2]

[node name="Infected_Ring" type="Node2D"]
script = ExtResource( 2 )

[node name="Infected_Bullet" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -22 )

[node name="Infected_Bullet2" parent="." instance=ExtResource( 1 )]
position = Vector2( -20, -12 )

[node name="Infected_Bullet3" parent="." instance=ExtResource( 1 )]
position = Vector2( -22, 1 )

[node name="Infected_Bullet4" parent="." instance=ExtResource( 1 )]
position = Vector2( -15, 15 )

[node name="Infected_Bullet5" parent="." instance=ExtResource( 1 )]
position = Vector2( -2, 21 )

[node name="Infected_Bullet6" parent="." instance=ExtResource( 1 )]
position = Vector2( 10, 14 )

[node name="Infected_Bullet7" parent="." instance=ExtResource( 1 )]
position = Vector2( 18, -1 )

[node name="Infected_Bullet8" parent="." instance=ExtResource( 1 )]
position = Vector2( 13, -17 )
